force-app/main/default/objects/TPM_Approval__c/TPM_Approval__c.object-meta.xml
<CustomObject>
    <description>Custom object for Promotion &amp; Claim approvals</description>
    <label>Approval</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>