force-app/main/default/objects/TPM_Approval__c/fields/TPM_Active__c.field-meta.xml
<CustomField>
    <fullName>TPM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Decides whether a promotion is available.</description>
    <inlineHelpText>Defines if the promotion is considered in the Trade Calendar and the Account Plan.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>