force-app/main/default/objects/TPM_Approval__c/fields/TPM_Balance__c.field-meta.xml
<CustomField>
    <fullName>TPM_Balance__c</fullName>
    <description>Balance</description>
    <label>Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>