force-app/main/default/objects/TPM_Approval__c/fields/TPM_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>TPM_Commit_Date__c</fullName>
    <description>The date the promotion was commited. This field is taken for getting the prices and discounts of a promotion.</description>
    <label>Commit Date</label>
    <type>Date</type>
</CustomField>