force-app/main/default/objects/TPM_Approval__c/fields/TPM_Default_Anchor__c.field-meta.xml
<CustomField>
    <fullName>TPM_Default_Anchor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Anchor</description>
    <label>Default Anchor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Default Anchor)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>