force-app/main/default/objects/TPM_Approval__c/fields/TPM_Delivery_Date_From__c.field-meta.xml
<CustomField>
    <fullName>TPM_Delivery_Date_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Delivery Date From</description>
    <label>Shipment Date From</label>
    <type>Date</type>
</CustomField>