force-app/main/default/objects/TPM_Approval__c/fields/TPM_Delivery_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>TPM_Delivery_Date_Thru__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <label>Shipment Date Thru</label>
    <type>Date</type>
</CustomField>