force-app/main/default/objects/TPM_Approval__c/fields/TPM_Group_Text__c.field-meta.xml
<CustomField>
    <fullName>TPM_Group_Text__c</fullName>
    <inlineHelpText>Used to group promotions in the trade calendar (Group By: Group Text).</inlineHelpText>
    <label>Group Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>