force-app/main/default/objects/TPM_Approval__c/fields/TPM_Is_Display__c.field-meta.xml
<CustomField>
    <fullName>TPM_Is_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox based on the BOM field on Promotion</description>
    <label>Is Display</label>
    <type>Checkbox</type>
</CustomField>