force-app/main/default/objects/TPM_Approval__c/fields/TPM_Managed_Account__c.field-meta.xml
<CustomField>
    <fullName>TPM_Managed_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for Account</description>
    <label>Managed Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>