force-app/main/default/objects/TPM_Approval__c/fields/TPM_Note__c.field-meta.xml
<CustomField>
    <fullName>TPM_Note__c</fullName>
    <description>Comment</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>