force-app/main/default/objects/TPM_Approval__c/fields/TPM_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>TPM_Owner_Name__c</fullName>
    <description>Custom Formula to display the Owner Name of the Record</description>
    <formula>Owner:User.FirstName + &apos; &apos;+  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>