force-app/main/default/objects/TPM_Approval__c/fields/TPM_Parent_Payment__c.field-meta.xml
<CustomField>
    <fullName>TPM_Parent_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Claim</description>
    <label>Parent Claim</label>
    <referenceTo>cgcloud__Payment__c</referenceTo>
    <relationshipLabel>Child Claims</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>