force-app/main/default/objects/TPM_Approval__c/fields/TPM_Payment__c.field-meta.xml
<CustomField>
    <fullName>TPM_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for Claim</description>
    <label>Claim</label>
    <referenceTo>cgcloud__Payment__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>