force-app/main/default/objects/TPM_Approval__c/fields/TPM_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>TPM_Payment_Amount__c</fullName>
    <description>Payment Amount</description>
    <label>Claim Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>