force-app/main/default/objects/TPM_Approval__c/fields/TPM_Payment_Anchor__c.field-meta.xml
<CustomField>
    <fullName>TPM_Payment_Anchor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Claim anchor</description>
    <label>Claim Anchor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Anchors</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>