force-app/main/default/objects/TPM_Approval__c/fields/TPM_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>TPM_Payment_Status__c</fullName>
    <description>Payment status</description>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Adjusted</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>To Be Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>