force-app/main/default/objects/TPM_Approval__c/fields/TPM_Payment_Template__c.field-meta.xml
<CustomField>
    <fullName>TPM_Payment_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Claim Template for approval object</description>
    <label>Claim Template</label>
    <referenceTo>cgcloud__Payment_Template__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>