force-app/main/default/objects/TPM_Approval__c/fields/TPM_Phase__c.field-meta.xml
<CustomField>
    <fullName>TPM_Phase__c</fullName>
    <description>Phase of the promotion</description>
    <label>Promotion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preparation</fullName>
                <default>true</default>
                <label>Preparation</label>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Modeling</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>For Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Finance edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>