force-app/main/default/objects/TPM_Approval__c/fields/TPM_Placement_Date_From__c.field-meta.xml
<CustomField>
    <fullName>TPM_Placement_Date_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Placement Date From</description>
    <label>In-Store Date From</label>
    <type>Date</type>
</CustomField>