force-app/main/default/objects/TPM_Approval__c/fields/TPM_Placement_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>TPM_Placement_Date_Thru__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <description>Placement Date Thru</description>
    <label>In-Store Date Thru</label>
    <type>Date</type>
</CustomField>