force-app/main/default/objects/TPM_Approval__c/fields/TPM_Promotion__c.field-meta.xml
<CustomField>
    <fullName>TPM_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for Promotion</description>
    <label>Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>