force-app/main/default/objects/TPM_Approval__c/fields/TPM_Promotion_Submitter__c.field-meta.xml
<CustomField>
    <fullName>TPM_Promotion_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TPM_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>