force-app/main/default/objects/TPM_Approval__c/fields/TPM_Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>TPM_Promotion_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for Promotion Template</description>
    <label>Promotion Template</label>
    <referenceTo>cgcloud__Promotion_Template__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>