force-app/main/default/objects/TPM_Approval__c/fields/TPM_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>TPM_Reference_Date__c</fullName>
    <description>Reference Date</description>
    <label>Reference Date</label>
    <type>Date</type>
</CustomField>