force-app/main/default/objects/TPM_Approval__c/fields/TPM_Rejected_Amount__c.field-meta.xml
<CustomField>
    <fullName>TPM_Rejected_Amount__c</fullName>
    <description>Rejected Amount</description>
    <label>Rejected Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>