force-app/main/default/objects/TPM_Approval__c/fields/TPM_Rejected_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>TPM_Rejected_Reason_Code__c</fullName>
    <description>Rejected Reason Code</description>
    <label>Rejected Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reason 1</fullName>
                <label>Authorized Return</label>
            </value>
            <value>
                <fullName>Reason 2</fullName>
                <label>Automatic Write-Off of less than $50</label>
            </value>
            <value>
                <fullName>Reason 3</fullName>
                <label>Damages</label>
            </value>
            <value>
                <fullName>Reason 4</fullName>
                <label>Freight Claim</label>
            </value>
            <value>
                <fullName>Reason 5</fullName>
                <label>Post Audit</label>
            </value>
            <value>
                <fullName>Reason 6</fullName>
                <label>Pricing Errors</label>
            </value>
            <value>
                <fullName>Reason 7</fullName>
                <label>Rejected-Charge back to customer</label>
            </value>
            <value>
                <fullName>Reason 8</fullName>
                <label>Transfer to Broker</label>
            </value>
            <value>
                <fullName>Reason 9</fullName>
                <label>UCD - Unearned Cash Discount</label>
            </value>
            <value>
                <fullName>Reason 10</fullName>
                <label>Other Reason</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>