force-app/main/default/objects/TPM_Approval__c/fields/TPM_Status__c.field-meta.xml
<CustomField>
    <fullName>TPM_Status__c</fullName>
    <description>Status of the Approval</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
                <default>true</default>
                <label>Submitted for Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>