force-app/main/default/objects/TPM_Approval__c/fields/TPM_Type__c.field-meta.xml
<CustomField>
    <fullName>TPM_Type__c</fullName>
    <description>Type of TPM Promotion</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>