force-app/main/default/objects/TPM_Approval__c/recordTypes/TPM_Claim.recordType-meta.xml
<RecordType>
    <fullName>TPM_Claim</fullName>
    <active>true</active>
    <description>Claim record type for Approval object</description>
    <label>Claim</label>
</RecordType>