force-app/main/default/objects/TPM_Approval__c/recordTypes/TPM_Promotion.recordType-meta.xml
<RecordType>
    <fullName>TPM_Promotion</fullName>
    <active>true</active>
    <description>Promotion record type for Approval object</description>
    <label>Promotion</label>
</RecordType>