force-app/main/default/objects/TPM_Approval__c/validationRules/TPM_Restrict_Status_Editability.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Restrict_Status_Editability</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(TPM_Status__c),
OR(
 ISPICKVAL(PRIORVALUE(TPM_Status__c), &quot;Approved&quot;),  
 ISPICKVAL(PRIORVALUE(TPM_Status__c), &quot;Rejected&quot;) 
)
)</errorConditionFormula>
    <errorMessage>You cannot edit status if the status is already approved or rejected.</errorMessage>
</ValidationRule>